overflow fix for branch detail half left

--- a/app/cells/components/branch_detail_half_left/branch_detail_half_left.scss
+++ b/app/cells/components/branch_detail_half_left/branch_detail_half_left.scss
@@ -5,7 +5,6 @@ $search-bar-height: calc(66px);
   border-right: 1px solid color($light-grey, 0.5); // for right
   bottom: 0;
   left: 0%; // for left
-  overflow: auto;
   padding: gutter(1) 0 gutter(1) gutter(1); // for left
   position: fixed;
   top: $search-bar-height;
